<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_credits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <TextView
        android:id="@+id/credits_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/credits_title_margin"
        android:textSize="@dimen/header_title"
        android:textColor="@color/colorTextDark"
        android:fontFamily="sans-serif-medium"
        android:text="@string/credits_header"/>

    <!-- Illustrations -->

    <TextView
        android:id="@+id/credits_subtitle_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/credits_subtitle_margin"
        android:textSize="@dimen/credits_subtitle_pictures"
        android:textColor="@color/colorTextDark"
        android:text="@string/credits_subtitle_pictures"/>

    <TextView
        android:id="@+id/credits_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/credits_pictures"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-light"
        android:text="@string/credits_pictures"/>


    <!-- App -->

    <TextView
        android:id="@+id/credits_subtitle_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/credits_subtitle_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/credits_subtitle_pictures"
        android:textColor="@color/colorTextDark"
        android:text="@string/credits_subtitle_app"/>

    <TextView
        android:id="@+id/credits_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/credits_pictures"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-light"
        android:text="@string/credits_app"/>

</LinearLayout>
