<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juliettegonzalez.breakthroughapp.MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="45dp"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorPrimary"
        android:text="@string/game_name"
        android:layout_gravity="top" />

    <LinearLayout
        android:id="@+id/expand_start_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/start_panel_horizontal_margin"
        android:layout_marginRight="@dimen/start_panel_horizontal_margin"
        android:layout_marginTop="@dimen/start_panel_vertical_margin"
        android:layout_marginBottom="@dimen/start_panel_vertical_margin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_rounded_corner"
        android:orientation="vertical"
        android:transitionName="@string/transition_home">

        <LinearLayout
            android:id="@+id/expand_hidden_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/new_game_btn"
                android:layout_width="@dimen/start_button_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/start_button_margin"
                android:paddingTop="@dimen/start_button_padding"
                android:paddingBottom="@dimen/start_button_padding"
                android:backgroundTint="@android:color/white"
                android:text="@string/new_game_btn"/>

            <Button
                android:id="@+id/multiplayer_btn"
                android:layout_width="@dimen/start_button_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/start_button_margin"
                android:paddingTop="@dimen/start_button_padding"
                android:paddingBottom="@dimen/start_button_padding"
                android:backgroundTint="@android:color/white"
                android:text="@string/multiplayer_btn"/>

            <Button
                android:id="@+id/rules_btn"
                android:layout_width="@dimen/start_button_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/start_button_margin"
                android:paddingTop="@dimen/start_button_padding"
                android:paddingBottom="@dimen/start_button_padding"
                android:backgroundTint="@android:color/white"
                android:text="@string/rules_btn"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/credits_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:text="@string/credits_link"/>

</android.support.design.widget.CoordinatorLayout>
