<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.juliettegonzalez.breakthroughapp.GameSelectionFragment"
    tools:showIn="@layout/activity_game">

    <TextView
        android:id="@+id/pawn_selection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="@dimen/selection_title_size"
        android:textColor="@android:color/white"
        android:text="@string/selection_game_title" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/pawnSelectionGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pawn_selection_title"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/selection_panel_margin"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity" >

        <!-- Dragon selection -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/dragon_pawn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dragon_pawn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/dragon_pawn"/>

        </LinearLayout>

        <!-- Grandpa selection -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <Button
                android:id="@+id/grandpa_pawn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grandpa_pawn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/grandpa_pawn"/>

        </LinearLayout>

        <!-- King selection -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <Button
                android:id="@+id/king_pawn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/king_pawn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/king_pawn"/>

        </LinearLayout>

        <!-- Wizard selection -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">
            <Button
                android:id="@+id/wizard_pawn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wizard_pawn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/wizard_pawn"/>

        </LinearLayout>
    </GridLayout>




</RelativeLayout>
